--- a/Source/Windows/DanceStudio/DanceStudio.CodedUITests/DanceStudio.CodedUITests.csproj
+++ b/Source/Windows/DanceStudio/DanceStudio.CodedUITests/DanceStudio.CodedUITests.csproj
@@ -106,6 +106,9 @@
   <ItemGroup>
     <None Include="UIMap.uitest" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Resources\" />
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
