Added proper copying of UT resources and added a UT to test Collada importing (currently fails).

--- a/Source/Common/DanceStudio.Core/DanceStudio.Core.vcxproj
+++ b/Source/Common/DanceStudio.Core/DanceStudio.Core.vcxproj
@@ -189,6 +189,7 @@
     <ClCompile Include="OpenGLExtensions.cpp" />
     <ClCompile Include="OpenGLRenderer.cpp" />
     <ClCompile Include="PathHelper.cpp" />
+    <ClCompile Include="Scene.cpp" />
     <ClCompile Include="StepChartEditor.cpp" />
     <ClCompile Include="Throw.cpp" />
     <ClCompile Include="Vector3d.cpp" />
