--- a/Source/Windows/DanceStudio/DanceStudio/DanceStudio.csproj
+++ b/Source/Windows/DanceStudio/DanceStudio/DanceStudio.csproj
@@ -173,7 +173,10 @@
   <Import Project="$(ProjectDir)..\..\..\..\Build\Targets\DanceStudio.Targets" />
   <PropertyGroup>
     <PostBuildEvent>mkdir $(TargetDir)Documentation
-copy /Y "$(ProjectDir)..\..\..\..\Documentation\User\Pdf\Dance Studio Help.pdf" "$(TargetDir)Documentation\Dance Studio Help.pdf"</PostBuildEvent>
+copy /Y "$(ProjectDir)..\..\..\..\Documentation\User\Pdf\Dance Studio Help.pdf" "$(TargetDir)Documentation\Dance Studio Help.pdf"
+
+if "$(ConfigurationName)"=="Debug" copy /Y $(ProjectDir)..\..\..\External\FMOD\dll\$(PlatformTarget)\log\*.dll $(TargetDir)
+if "$(ConfigurationName)"=="Release" copy /Y $(ProjectDir)..\..\..\External\FMOD\dll\$(PlatformTarget)\*.dll $(TargetDir)</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
