--- a/Source/Windows/DanceStudio/DanceStudio/DanceStudio.csproj
+++ b/Source/Windows/DanceStudio/DanceStudio/DanceStudio.csproj
@@ -178,6 +178,9 @@ copy /Y "$(ProjectDir)..\..\..\..\Documentation\User\Pdf\Dance Studio Help.pdf" 
 if "$(ConfigurationName)"=="Debug" copy /Y $(ProjectDir)..\..\..\External\FMOD\dll\$(PlatformTarget)\log\*.dll $(TargetDir)
 if "$(ConfigurationName)"=="Release" copy /Y $(ProjectDir)..\..\..\External\FMOD\dll\$(PlatformTarget)\*.dll $(TargetDir)</PostBuildEvent>
   </PropertyGroup>
+  <PropertyGroup>
+    <PreBuildEvent>powershell "$(ProjectDir)..\..\..\..\Build\Scripts\FixWpfDesigner.ps1"</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
