Adding the start of some functionality for variable speed playback with FMOD.

--- a/Source/Common/DanceStudio.Core/DanceStudio.Core.vcxproj
+++ b/Source/Common/DanceStudio.Core/DanceStudio.Core.vcxproj
@@ -188,6 +188,7 @@
     <ClInclude Include="Stdafx.h" />
     <ClInclude Include="StepChartEditor.h" />
     <ClInclude Include="DSStopPeriodModel.h" />
+    <ClInclude Include="DSStepItemType.h" />
     <ClInclude Include="StringHelper.h" />
     <ClInclude Include="Throw.h" />
     <ClInclude Include="Typedefs.h" />
