--- a/Source/Common/DanceStudio.Core/DanceStudio.Core.vcxproj.filters
+++ b/Source/Common/DanceStudio.Core/DanceStudio.Core.vcxproj.filters
@@ -152,6 +152,9 @@
     <ClInclude Include="DSStepItemType.h">
       <Filter>Source Files\Models</Filter>
     </ClInclude>
+    <ClInclude Include="Node3d.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="OpenGLExtensions.cpp">
@@ -212,6 +215,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DanceStudio.Core.AudioStream.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Node3d.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
