--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,10 @@
 *.sln.docstates
 
 # Build results
-[Dd]ebug/
+#[Dd]ebug/
 [Dd]ebugPublic/
-[Rr]elease/
-x64/
+#[Rr]elease/
+#x64/
 # build/
 bld/
 [Bb]in/
